--- a/services/inventory/composer.json
+++ b/services/inventory/composer.json
@@ -31,11 +31,14 @@
         "nyholm/psr7": "^1.8.2",
         "open-telemetry/api": "^1.7.1",
         "open-telemetry/exporter-otlp": "^1.3.3",
+        "open-telemetry/detector-container": "^1.1",
         "open-telemetry/opentelemetry-auto-http-async": ">=1.1.1",
         "open-telemetry/opentelemetry-auto-psr18": ">=1.1.1",
-        "open-telemetry/opentelemetry-auto-symfony": ">=1.1.1",
+        "open-telemetry/opentelemetry-auto-symfony": "^1.1.1",
         "open-telemetry/opentelemetry-auto-guzzle": "^1.2",
+        "open-telemetry/opentelemetry-logger-monolog": "^1.1.0",
         "open-telemetry/sdk": "^1.10",
+        "symfony/monolog-bundle": "^4",
         "symfony/console": "8.0.*",
         "symfony/dotenv": "8.0.*",
         "symfony/flex": "^2.10",
