--- a/services/orders/composer.json
+++ b/services/orders/composer.json
@@ -21,22 +21,24 @@
         "php": ">=8.4",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "otel-php/billing-client": "@dev",
+        "otel-php/inventory-client": "@dev",
+        "otel-php/menu-client": "@dev",
         "doctrine/doctrine-bundle": "^3.2.1",
         "doctrine/doctrine-migrations-bundle": "^4.0",
+        "zircote/swagger-php": "^4.11.1",
         "doctrine/orm": "^3.6",
         "nyholm/psr7": "^1.8.2",
         "open-telemetry/api": "^1.7.1",
         "open-telemetry/exporter-otlp": "^1.3.3",
-        "open-telemetry/opentelemetry-auto-doctrine": "^0.3.1",
-        "open-telemetry/opentelemetry-auto-guzzle": "^1.2",
+        "open-telemetry/detector-container": "^1.1",
         "open-telemetry/opentelemetry-auto-http-async": ">=1.1.1",
-        "open-telemetry/opentelemetry-auto-io": "^0.1.0",
         "open-telemetry/opentelemetry-auto-psr18": ">=1.1.1",
         "open-telemetry/opentelemetry-auto-symfony": "^1.1.1",
+        "open-telemetry/opentelemetry-auto-guzzle": "^1.2",
+        "open-telemetry/opentelemetry-logger-monolog": "^1.1.0",
         "open-telemetry/sdk": "^1.10",
-        "otel-php/billing-client": "@dev",
-        "otel-php/inventory-client": "@dev",
-        "otel-php/menu-client": "@dev",
+        "symfony/monolog-bundle": "^4",
         "symfony/console": "8.0.*",
         "symfony/dotenv": "8.0.*",
         "symfony/flex": "^2.10",
@@ -46,8 +48,7 @@
         "symfony/runtime": "8.0.*",
         "symfony/serializer": "8.0.*",
         "symfony/uid": "8.0.*",
-        "symfony/yaml": "8.0.*",
-        "zircote/swagger-php": "^4.11.1"
+        "symfony/yaml": "8.0.*"
     },
     "config": {
         "allow-plugins": {
